# hackaithon-waste-classification

./: .gitignore  README.md  analyze.py  create_report.py  deep_audit.py  deep_audit2.py  gen_pdf.py  inspect_dataset.py  predict.py  pyproject.toml  requirements.txt  sample_submission.csv  submission.csv  train.py  train_best.py  train_self_training.py
configs/: config.yaml
data/: index.3lc.json
reports/: Round1_Data_Detective.html  Round1_Data_Detective.md  Round1_Data_Detective.pptx  ablation.md  audit_report.html  confident_learning.md  findings.json  findings.md  index.md  metrics.md
reports/experiments/: baseline.md  confident_learning.md  improved.md
scripts/: clean_data.py  generate_report.py  inspect_dataset.py  predict.py  run_all.sh  train_baseline.py  train_confident_learning.py  train_improved.py  visualize.py
src/: __init__.py  analysis.py  clean_data.py  confident_learning.py  dataset.py  improved_pipeline.py  inspect_dataset.py  model.py  predict.py  predictor.py  register.py  train.py  trainer.py  visualization.py  visualize.py
submissions/: submission.csv
