[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "waste-classification"
version = "1.0.0"
description = "Waste classification with label noise correction (Hack[AI]Thon 2.0)"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "pillow>=9",
    "numpy>=1.24",
    "scikit-learn>=1.2",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "tqdm>=4.64",
    "opencv-python>=4.7",
    "umap-learn>=0.5",
    "imagehash>=4.3",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
include = ["src*"]
